Implemented endpoints to move, update and copy StoredProducts
