# src/main/resources/openapi/documentation.yaml
@@ -222,14 +222,7 @@ paths:
                 $ref: "#/components/schemas/NetworkSpace"
   /v1/spaces/{id}:
     delete:
-      description: "route(\"/products\") { <br> get { <br> val id = call.parameters[\"\
-        id\"]!! <br> val errors = mutableListOf<ApiError>() <br> if (!id.isUUID())\
-        \ { <br> errors.add(ErrorMessages.INVALID_UUID_SPACE) <br> } <br> if (errors.isNotEmpty())\
-        \ { <br> return@get call.respond(HttpStatusCode.BadRequest, ApiResponse.Error(errors))\
-        \ <br> } <br> val space = spaceRepository.getSpace(id) <br> if (space == null)\
-        \ { <br> errors.add(ErrorMessages.SPACE_NOT_FOUND) <br> return@get call.respond(HttpStatusCode.NotFound,\
-        \ ApiResponse.Error(errors)) <br> } <br> val products = spaceRepository.getProducts(id)\
-        \ <br> call.respond(products.map { it.toNetworkProduct() }) <br> } <br> }"
+      description: ""
       parameters:
       - name: "id"
         in: "path"
@@ -887,6 +880,178 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/StoredProductDTO"
+  /v1/storedProducts/{id}/copy:
+    post:
+      description: ""
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CopyStoredProductRequest"
+        required: true
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+                Example#2:
+                  description: ""
+                  value:
+                    errors: []
+                Example#3:
+                  description: ""
+                  value:
+                    errors: []
+                Example#4:
+                  description: ""
+                  value:
+                    errors: []
+                Example#5:
+                  description: ""
+                  value:
+                    errors: []
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/StoredProductDTO"
+  /v1/storedProducts/{id}/move:
+    patch:
+      description: ""
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MoveStoredProductRequest"
+        required: true
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+                Example#2:
+                  description: ""
+                  value:
+                    errors: []
+                Example#3:
+                  description: ""
+                  value:
+                    errors: []
+                Example#4:
+                  description: ""
+                  value:
+                    errors: []
+                Example#5:
+                  description: ""
+                  value:
+                    errors: []
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/StoredProductDTO"
+  /v1/storedProducts/{id}/update:
+    patch:
+      description: ""
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateStoredProductRequest"
+        required: true
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+                Example#2:
+                  description: ""
+                  value:
+                    errors: []
+                Example#3:
+                  description: ""
+                  value:
+                    errors: []
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Error"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    errors: []
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/NetworkStoredProduct"
 components:
   schemas:
     NetworkProduct:
@@ -1198,3 +1363,23 @@ components:
       - "productId"
       - "spaceId"
       - "createdAt"
+    CopyStoredProductRequest:
+      type: "object"
+      properties:
+        targetSpaceId:
+          type: "string"
+      required:
+      - "targetSpaceId"
+    MoveStoredProductRequest:
+      type: "object"
+      properties:
+        targetSpaceId:
+          type: "string"
+      required:
+      - "targetSpaceId"
+    UpdateStoredProductRequest:
+      type: "object"
+      properties:
+        quantity:
+          type: "integer"
+          format: "int32"
